# pyproject.toml
[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "just>=0.8.162",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-openai>=0.3.13",
    "langchain-openapi>=0.1.1",
    "langgraph>=0.3.31",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "six>=1.17.0",
    "streamlit>=1.44.1",
]
